// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event mutations:  create event create an event with all fields 1`] = `
{
  "data": {
    "createEvent": {
      "event": {
        "admissionFee": 10,
        "admissionFeeWithDiscount": 4,
        "amountOfFloors": 3,
        "club": {
          "id": 1,
          "name": "name",
        },
        "date": "event-date",
        "description": "event-description",
        "genres": [
          {
            "id": 1,
            "name": "genre1",
          },
          {
            "id": 2,
            "name": "genre2",
          },
        ],
        "id": 2,
        "imageUrls": [
          "image-url-1",
          "image-url-2",
        ],
        "links": [
          {
            "href": "link",
            "type": "FACEBOOK",
          },
        ],
        "minimumAge": 18,
        "name": "event-name",
        "priceCategory": 2,
        "special": "event-special",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event mutations:  create event create an event with empty genres 1`] = `
{
  "data": {
    "createEvent": {
      "event": {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": {
          "id": 1,
          "name": "name",
        },
        "date": "event-date",
        "description": null,
        "genres": [],
        "id": 2,
        "imageUrls": [],
        "links": [],
        "minimumAge": null,
        "name": "event-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event mutations:  create event create an event with only required information 1`] = `
{
  "data": {
    "createEvent": {
      "event": {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": {
          "id": 1,
          "name": "name",
        },
        "date": "event-date",
        "description": null,
        "genres": [],
        "id": 2,
        "imageUrls": [],
        "links": [],
        "minimumAge": null,
        "name": "event-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event mutations:  create event create an event without permission shoul yield error 1`] = `
[
  [GraphQLError: You need to be logged in as admin to mutate data],
]
`;

exports[`event mutations:  delte event without permission should yield error 1`] = `
[
  [GraphQLError: You need to be logged in as admin to mutate data],
]
`;

exports[`event mutations:  update event to only have required fields 1`] = `
{
  "data": {
    "updateEvent": {
      "event": {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": {
          "id": 2,
          "name": "name",
        },
        "date": "updated-date",
        "description": null,
        "genres": [],
        "id": 1,
        "imageUrls": [],
        "links": [],
        "minimumAge": null,
        "name": "updated-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event mutations:  update event with all fields 1`] = `
{
  "data": {
    "updateEvent": {
      "event": {
        "admissionFee": 20,
        "admissionFeeWithDiscount": 3,
        "amountOfFloors": 2,
        "club": {
          "id": 2,
          "name": "name",
        },
        "date": "updated-date",
        "description": "updated-description",
        "genres": [
          {
            "id": 2,
            "name": "genre2",
          },
          {
            "id": 3,
            "name": "genre3",
          },
        ],
        "id": 1,
        "imageUrls": [
          "image-url-1",
          "image-url-2",
        ],
        "links": [
          {
            "href": "updated-link",
            "type": "FACEBOOK",
          },
        ],
        "minimumAge": 16,
        "name": "updated-name",
        "priceCategory": 1,
        "special": "updated-special",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event mutations:  update event with emojis in description 1`] = `
{
  "data": {
    "updateEvent": {
      "event": {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": {
          "id": 2,
          "name": "name",
        },
        "date": "updated-date",
        "description": "🍃🔝🎉📢👉🌵🎵",
        "genres": [],
        "id": 1,
        "imageUrls": [],
        "links": [],
        "minimumAge": null,
        "name": "updated-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event mutations:  update event with empty genre list 1`] = `
{
  "data": {
    "updateEvent": {
      "event": {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": {
          "id": 2,
          "name": "name",
        },
        "date": "updated-date",
        "description": null,
        "genres": [],
        "id": 1,
        "imageUrls": [],
        "links": [],
        "minimumAge": null,
        "name": "updated-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event mutations:  update event without permission should yield error 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: You need to be logged in as admin to mutate data],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
